--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -111,6 +111,14 @@ rules:
   - update
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - namespaces
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - extensions.istio.io
   resources:
   - wasmplugins
